tests/cases/borrowing/errors/named-borrow-conflict.ari
fn inspect(value: ref i64) -> i64 {
  return 0;
}

fn touch(value: ref mut i64) -> i64 {
  return 0;
}

fn main() -> i64 {
  var number = 7;
  let unique = ref mut number;
  let shared = ref number;
  return touch(unique);
}
